--- a/packages/monitoring-service/grafana-standalone/dashboards/dashboard.yml
+++ b/packages/monitoring-service/grafana-standalone/dashboards/dashboard.yml
@@ -1,9 +1,9 @@
 apiVersion: 1
 
 providers:
-  - name: 'monitoring-dashboards'
+  - name: "monitoring-dashboards"
     orgId: 1
-    folder: 'Monitoring'
+    folder: "Monitoring"
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
